// Vitest Snapshot v1

exports[`<AffixedProgressBar /> > should render 1`] = `
<Component
  className="ProgressBarAffixed-sc-mfnoiw-1"
  now={68}
/>
`;

exports[`<AffixedProgressBar /> > should render when [bottom=true] 1`] = `
<Component
  bottom={true}
  className="ProgressBarAffixed-sc-mfnoiw-1"
  now={68}
/>
`;

exports[`<AffixedProgressBar /> > should render when [color=%p] blue 1`] = `
<Component
  className="ProgressBarAffixed-sc-mfnoiw-1"
  color="blue"
  now={68}
/>
`;

exports[`<AffixedProgressBar /> > should render when [color=%p] green 1`] = `
<Component
  className="ProgressBarAffixed-sc-mfnoiw-1"
  color="green"
  now={68}
/>
`;

exports[`<AffixedProgressBar /> > should render when [color=%p] orange 1`] = `
<Component
  className="ProgressBarAffixed-sc-mfnoiw-1"
  color="orange"
  now={68}
/>
`;

exports[`<AffixedProgressBar /> > should render when [color=%p] red 1`] = `
<Component
  className="ProgressBarAffixed-sc-mfnoiw-1"
  color="red"
  now={68}
/>
`;

exports[`<ProgressBar /> > should render 1`] = `
<StyledProgress
  max="100"
  value={32}
/>
`;

exports[`<ProgressBar /> > should render when [color=%p] blue 1`] = `
<StyledProgress
  color="blue"
  max="100"
  value={32}
/>
`;

exports[`<ProgressBar /> > should render when [color=%p] green 1`] = `
<StyledProgress
  color="green"
  max="100"
  value={32}
/>
`;

exports[`<ProgressBar /> > should render when [color=%p] orange 1`] = `
<StyledProgress
  color="orange"
  max="100"
  value={32}
/>
`;

exports[`<ProgressBar /> > should render when [color=%p] red 1`] = `
<StyledProgress
  color="red"
  max="100"
  value={32}
/>
`;
